--- a/hi-techCore/styles/css/downloadFonts.css
+++ b/hi-techCore/styles/css/downloadFonts.css
@@ -9,6 +9,11 @@ pois as fontes precisam ser importadas antes de serem usadas no site.
 */
 
 @font-face {
+    font-family: "Micron";
+    src: url("../../fonts/Micron.otf");
+} 
+
+@font-face {
     font-family: "2015_Cruiser";
     src: url("../../fonts/2015_Cruiser.otf");
 } 
