--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -20,11 +20,15 @@ TODO: Variables
 }
 
 .lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
+  line-height: 1.5 !important;
+}
+
+.lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
   line-height: 1.9 !important;
 }
 
 .lineHeight, p, address, li, ul, ol, dl, dt, dd, textarea, .switch.key_full .piece_text, .switch.key_text .piece_text, .lightbox_text {
-  line-height: 1.5 !important;
+  line-height: 1.9 !important;
 }
 
 /* Padrão: 600-700px. */
@@ -92,7 +96,7 @@ html {
 TODO: Error
 ◈──────────────────────────────────────────────────────◈ */
 .error {
-  font-size: 19rem;
+  font-size: 15rem;
   /*     
     color: white;
     background-color: red;
@@ -239,7 +243,7 @@ TODO: Texts
 }
 
 html {
-  font-family: Medabots;
+  font-family: "2015_Cruiser_Italic";
   font-size: 1px;
   color: black;
 }
@@ -252,7 +256,7 @@ q, cite, figcaption,
 form, label, input, textarea, select, button, fieldset, legend,
 table, tr, th, td,
 e {
-  font-size: 19rem;
+  font-size: 15rem;
 }
 
 div, header, nav, main, article, section, aside, footer {
@@ -668,7 +672,7 @@ dl > div:not(:nth-last-of-type(1)) {
 /*  TODO:    1 ▶ Classes
 ◈──────────────────────────────────────────────────────◈ */
 .font_size {
-  font-size: 19rem;
+  font-size: 15rem;
 }
 
 .font_monospace, .codeViewer2 .text dd code {
@@ -697,7 +701,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .mini_topic {
-  font-size: 19rem;
+  font-size: 15rem;
   background: 0;
   text-align: center;
   font-weight: bold;
@@ -705,7 +709,7 @@ dl > div:not(:nth-last-of-type(1)) {
 }
 
 .container_text {
-  font-size: 19rem;
+  font-size: 15rem;
   padding: 8px 13px 9px;
   border: 1px solid #cccccc;
   border-radius: 20px;
@@ -960,7 +964,7 @@ dl.noListStyle > div:not(:nth-last-of-type(1)), dl.codeViewer > div:not(:nth-las
 }
 
 .list_featured li div {
-  font-size: 19rem;
+  font-size: 15rem;
 }
 
 .list_featured li + li {
@@ -2046,7 +2050,7 @@ TODO: Layout Sections
   right: 9px;
   z-index: 1000;
   background: url(../../images/bgs/header.png) center/100% 100%;
-  font-size: 19rem;
+  font-size: 15rem;
   box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.28);
   /*
     border-radius: 0px;
@@ -4909,7 +4913,7 @@ figure.outdoor img {
 }
 
 .lightbox_text {
-  font-size: 19rem;
+  font-size: 15rem;
   font-weight: bold;
   filter: drop-shadow(0px 0px 2px #007899);
 }
