--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -36,6 +36,13 @@ $font_size: 14rem;
     line-height: 2.0358 !important;
 }
 
+$font_default: Medabots;
+$font_size: 19rem; 
+
+.lineHeight {
+    line-height: 1.5 !important;
+}
+
 $font_default: "2015_Cruiser";
 $font_size: 15rem;
 
@@ -43,11 +50,11 @@ $font_size: 15rem;
     line-height: 1.9 !important;
 }
 
-$font_default: Medabots;
-$font_size: 19rem; 
+$font_default: "2015_Cruiser_Italic";
+$font_size: 15rem;
 
 .lineHeight {
-    line-height: 1.5 !important;
+    line-height: 1.9 !important;
 }
 
 
