--- a/styles/scss/identity.scss
+++ b/styles/scss/identity.scss
@@ -1080,6 +1080,10 @@ $STC_and_SDSB_FULLHD_margin_horizontal: 20px;
         min-width: max-content; 
     }  */
 
+    .Name {
+        max-width: 186px;
+    }
+
     // .Description:not(th), .Notes:not(th) { 
     .Description, .Notes { 
 
