--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -77,14 +77,7 @@ $font_size: 15rem;
 
 h2, h3, h4, h5, h6 {
     font-family: "2015_Cruiser_Hollow_Italic" !important;
-    text-shadow: 1px 0px 0 hsla(195, 100%, 50%, 0.2);
-}
-
-th {
-    font-family: "2015_Cruiser_Hollow_Italic" !important;
-    text-shadow: 1px 0px 0 hsla(195, 100%, 50%, 0.2);
-    //color: hsl(195, 100%, 46%) !important;
-    //filter: drop-shadow(1px 0px 1px hsl(195, 100%, 50%));
+    // text-shadow: 1px 0px 0 hsla(195, 100%, 50%, 0.2);
 }
 
 
